--- a/.gitignore
+++ b/.gitignore
@@ -551,3 +551,5 @@ FodyWeavers.xsd
 # End of https://www.toptal.com/developers/gitignore/api/macos,webstorm,vscode,visualstudio,linux,windows
 
 node_modules/
+
+.idea/
