--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lint": "node ./node_modules/eslint/bin/eslint ."
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "eslint": "^7.24.0",
@@ -22,6 +23,7 @@
     "mysql2": "^2.2.5",
     "sequelize": "^6.6.2",
     "sequelize-cli": "^6.2.0",
+    "sqlite3": "^5.0.2",
     "uuid": "^8.3.2"
   }
 }
