--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "lint": "node ./node_modules/eslint/bin/eslint ."
+    "lint": "node ./node_modules/eslint/bin/eslint .",
+    "test": "node ./node_modules/nyc/bin/nyc.js --reporter=text --reporter=html ./node_modules/mocha/bin/mocha tests tests/**/*.spec.js tests/**/**/*.spec.js"
   },
   "dependencies": {
     "@types/express-serve-static-core": "^4.17.19",
@@ -19,14 +20,19 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
-    "mocha": "^8.3.2",
     "moment": "^2.29.1",
     "morgan": "~1.9.1",
     "ms": "^2.1.3",
     "mysql2": "^2.2.5",
+    "node-mocks-http": "^1.10.1",
+    "nyc": "^15.1.0",
     "sequelize": "^6.6.2",
     "sequelize-cli": "^6.2.0",
+    "should": "^13.2.3",
     "sqlite3": "^5.0.2",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "mocha": "^8.4.0"
   }
 }
