--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "lint": "node ./node_modules/eslint/bin/eslint .",
+    "lint": "node ./node_modules/eslint/bin/eslint . --fix",
     "test": "node ./node_modules/nyc/bin/nyc.js --reporter=text --reporter=html ./node_modules/mocha/bin/mocha tests tests/**/*.spec.js tests/**/**/*.spec.js"
   },
   "dependencies": {
+    "@slack/webhook": "^6.1.0",
     "@types/express-serve-static-core": "^4.17.19",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
